feat: bans
